<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/main_menu"/>
    <item
        android:id="@+id/achievementsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_check_circle_24"
        android:title="@string/menu_achievements"/>
    <item
        android:id="@+id/catalogFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_apps_24"
        android:title="@string/menu_catalog"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_applications_24"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/friendsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_supervisor_account_24"
        android:title="@string/menu_friends"/>
</menu>